@@ -55,7 +55,7 @@ namespace TAO
   namespace Portable_Server
   {
     class Servant_Upcall;
-  };
+  }
 }
 
 typedef void (*TAO_Skeleton)(
