@@ -1,3 +1,10 @@
+Sun Nov 20 19:22:58 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tao/Abstract_Servant_Base.h:
+        * tao/PortableServer/Operation_Table.h:
+        * tao/ServerRequestInterceptor_Adapter.h:
+          Fixed gcc warnings
+
 Sun Nov 20 19:16:59 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/Skeleton_Inheritance/skel_inheritance.mpc:
